# FITOM_patch_editor

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/gui/: BmpLoader.cpp  BmpLoader.h  ImageLoader.cpp  ImageLoader.h  MidiMessages.h  MidiPipeClient.cpp  MidiPipeClient.h  Preferences.cpp  Preferences.h  PreviewOutput.cpp  PreviewOutput.h  RtMidiOutput.cpp  RtMidiOutput.h  main.cpp
docs/: DESIGN.md  STATUS.md
fixtures/: profile.json
fixtures/banks/OPM/dx27_dx100/: 00_default.hwbank.json
fixtures/banks/PCM/: test.pcmbank.json  test_adpcm.json
fixtures/drums/: direct_kit.drumkit.json  std_kit.drumkit.json
fixtures/patches/: 00_general.patchbank.json
fixtures/sw/: default_gm.swbank.json
include/fpe/: DrumKit.h  HwPatch.h  JsonUtil.h  NativePatch.h  PatchWorkspace.h  PcmBank.h  Profile.h  SampleZone.h  SwPatch.h  VoicePatchType.h
src/: DrumKit.cpp  HwPatch.cpp  NativePatch.cpp  PatchWorkspace.cpp  PcmBank.cpp  Profile.cpp  SampleZone.cpp  SwPatch.cpp  VoicePatchType.cpp
tests/: smoke_test.cpp
